--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -9,76 +9,94 @@
             type="com.jollyremedy.notreddit.models.comment.Comment" />
     </data>
 
+    <!-- The parent wrapper -->
     <LinearLayout
         android:id="@+id/item_comment_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <View
-            android:layout_width="5dp"
-            android:background="@color/secondary_background_gray"
-            android:layout_height="match_parent" />
-
-        <LinearLayout
+        <!-- The card itself -->
+        <android.support.v7.widget.CardView
             android:id="@+id/item_comment_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:layout_marginTop="1dp"
             android:orientation="vertical"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp"
             app:cardCornerRadius="0dp">
 
+            <!-- The card's internal layout -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <!-- The comment body / author / etc for an actual content (not a MORE) -->
                 <LinearLayout
+                    android:id="@+id/item_comment_actual_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/default_gap">
+                    android:orientation="vertical">
 
                     <org.sufficientlysecure.htmltextview.HtmlTextView
                         android:id="@+id/item_comment_body"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:padding="16dp"
                         app:html="@{comment.data.bodyHtml}"
                         tools:text="This game is literally the Dark Souls of Monster Hunter 2D paltformers." />
 
+                    <!-- Bottom line of the card for author -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginTop="8dp"
+                        android:background="@color/secondary_background_gray"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <android.support.v4.widget.Space
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <TextView
+                            android:id="@+id/item_comment_author"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:gravity="center_vertical"
+                            android:paddingTop="@dimen/default_gap"
+                            android:paddingBottom="@dimen/default_gap"
+                            android:paddingEnd="@dimen/default_gap"
+                            android:text="@{comment.data.author}"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            tools:text="Spitsonpuppies" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
+                <!-- The "MORE" section of the card, only visible in that exact situation -->
                 <LinearLayout
+                    android:id="@+id/item_comment_more_wrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingEnd="4dp"
-                    android:paddingStart="4dp"
-                    android:paddingTop="2dp">
-
-                    <android.support.v4.widget.Space
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+                    android:orientation="vertical"
+                    android:padding="@dimen/default_gap"
+                    android:visibility="gone">
 
                     <TextView
-                        android:id="@+id/item_comment_author"
+                        android:id="@+id/item_comment_more_text_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{comment.data.author}"
-                        android:textColor="@color/accent"
-                        tools:text="Spitsonpuppies" />
+                        android:text="More"
+                        android:textColor="@color/accent" />
                 </LinearLayout>
-
             </LinearLayout>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/item_comment_more_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MORE" />
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 </layout>
