--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="postClickedCallback"
-            type="com.jollyremedy.notreddit.ui.postlist.PostAdapter.PostClickedCallback" />
+            type="com.jollyremedy.notreddit.ui.postlist.PostListAdapter.PostClickedCallback" />
     </data>
 
     <android.support.v7.widget.CardView
