--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -1,62 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
-        <variable
-            name="postDetailViewModel"
-            type="com.jollyremedy.notreddit.ui.postdetail.PostDetailViewModel" />
-        <variable
-            name="post"
-            type="com.jollyremedy.notreddit.models.post.Post" />
-        <import type="android.view.View" />
-    </data>
-
-    <android.support.v4.widget.NestedScrollView
-        android:background="@android:color/white"
-        android:id="@+id/nested"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/post_detail_comments_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/white"
         android:scrollbars="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <include
-                android:id="@+id/post_detail_post_item"
-                layout="@layout/item_post" />
-
-            <android.support.v7.widget.CardView
-                android:visibility="@{postDetailViewModel.shouldShowPostCard(post) ? View.VISIBLE : View.GONE}"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="12dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="@dimen/default_gap">
-
-                    <org.sufficientlysecure.htmltextview.HtmlTextView
-                        android:id="@+id/post_detail_post_body"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:html="@{post.data.selfTextHtml}" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/post_detail_comments_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </android.support.v7.widget.RecyclerView>
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </android.support.v7.widget.RecyclerView>
 </layout>
